fix: letter-spacing

--- a/src/components/AboutProject/components/Factoid.css
+++ b/src/components/AboutProject/components/Factoid.css
@@ -2,6 +2,7 @@
   margin: 0 0 26px;
   font-size: 20px;
   line-height: 24px;
+  letter-spacing: -0.44px;
 }
 
 .factoid__description {
